--- a/index.html
+++ b/index.html
@@ -37,8 +37,30 @@
 
   <section>
 
+    <!-- <div class="product">
+      <img src="https://i.dummyjson.com/data/products/6/thumbnail.png" alt="">
+    </div>
+    <div class="product">
+    </div>
+    <div class="product">
+    </div>
+    <div class="product">
+    </div>
+    <div class="product">
+    </div>
+    <div class="product">
+    </div>
+    <div class="product">
+    </div>
+    <div class="product">
+    </div> -->
+
   </section>
 
+  <footer>© 2023 Tural Hasanov. All Rights Reserved.</footer>
+
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
