product template ready

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <div>PRODUCTS INFO</div>
+    <div>Web & Mobile 1 / Assignment 2</div>
     <div class="searchBar">
       <div>
         <img src="./images/lupa copy.svg" alt="lupa">
