--- a/index.html
+++ b/index.html
@@ -37,27 +37,31 @@
 
   <section>
 
-    <!-- <div class="product">
-      <img src="https://i.dummyjson.com/data/products/6/thumbnail.png" alt="">
+
+    <div class="circles">
+      <div class="circle1"></div>
+      <div class="circle2"></div>
+      <div class="circle3"></div>
+      <div class="circle4"></div>
+      <div class="circle5"></div>
+      <div class="circle6"></div>
+      <div class="circle7"></div>
+      <div class="circle8"></div>
+      <div class="circle9"></div>
+      <div class="circle10"></div>
+      <div class="circle11"></div>
+      <div class="circle12"></div>
+      <div class="circle13"></div>
+      <div class="circle14"></div>
+      <div class="circle15"></div>
     </div>
-    <div class="product">
-    </div>
-    <div class="product">
-    </div>
-    <div class="product">
-    </div>
-    <div class="product">
-    </div>
-    <div class="product">
-    </div>
-    <div class="product">
-    </div>
-    <div class="product">
-    </div> -->
+
 
   </section>
 
   <footer>© 2023 Tural Hasanov. All Rights Reserved.</footer>
+
+
 
 
   <script src="./script.js"></script>
