individual pages and search are working

--- a/index.html
+++ b/index.html
@@ -29,13 +29,31 @@
         <select name="filtration" id="selectFilter">
           <option value="smartphones">Smartphones</option>
           <option value="laptops">Laptops</option>
+          <option value="fragrances">Fragrances</option>
+          <option value="skincare">Skincare</option>
+          <option value="groceries">Groceries</option>
+          <option value="home-decoration">Home-decoration</option>
+          <option value="furniture">Furniture</option>
+          <option value="tops">Tops</option>
+          <option value="womens-dresses">Womens-dresses</option>
+          <option value="womens-shoes">Womens-shoes</option>
+          <option value="mens-shirts">Mens-shirts</option>
+          <option value="mens-shoes">Mens-shoes</option>
+          <option value="mens-watches">Mens-watches</option>
+          <option value="womens-watches">Womens-watches</option>
+          <option value="womens-bags">Women-bags</option>
+          <option value="womens-jewellery">Womens-jewellery</option>
+          <option value="sunglasses">Sunglasses</option>
+          <option value="automotive">Automotive</option>
+          <option value="motorcycle">Motorcycle</option>
+          <option value="lighting">Lighting</option>
         </select>
       </div>
 
     </div>
   </header>
 
-  <section>
+  <section class="section1">
 
 
     <div class="circles">
@@ -57,6 +75,12 @@
     </div>
 
 
+
+
+  </section>
+
+  <section class="section2">
+    Individual product
   </section>
 
   <footer>© 2023 Tural Hasanov. All Rights Reserved.</footer>
