--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <div>Web & Mobile 1 / Assignment 2</div>
     <div class="searchBar">
       <div>
-        <img src="./images/lupa copy.svg" alt="lupa">
-        <input type="text" class="inputSearch" placeholder="Type here...">
+        <img src="./images/lupa copy.svg" alt="lupa" />
+        <input type="text" class="inputSearch" placeholder="Type here..." />
       </div>
-
       <div>
         <label for="selectFilter">Filter by: </label>
         <select name="filtration" id="selectFilter">
@@ -49,13 +48,10 @@
           <option value="lighting">Lighting</option>
         </select>
       </div>
-
     </div>
   </header>
 
   <section class="section1">
-
-
     <div class="circles">
       <div class="circle1"></div>
       <div class="circle2"></div>
@@ -73,20 +69,11 @@
       <div class="circle14"></div>
       <div class="circle15"></div>
     </div>
-
-
-
-
   </section>
 
-  <section class="section2">
-    Individual product
-  </section>
+  <section class="section2"></section>
 
   <footer>© 2023 Tural Hasanov. All Rights Reserved.</footer>
-
-
-
 
   <script src="./script.js"></script>
 </body>
